<resources>
    <string name="app_name">BeanQuest</string>

    <!-- activity_splash-->
    <string name="app_name_splash">Bean&amp;Quest</string>
    <string name="slogan">Закажи заранее, что бы поесть сразу</string>
    <string name="creator">byLuka</string>

    <!-- activity_start-->
    <string name="slogan_2">Насладись едой, не ожидая \nготовки</string>
    <string name="next">Далее</string>

    <!-- activity_login_user-->
    <string name="login_to_your_account">Войдите в аккаунт</string>
    <string name="email_or_number"> Почта</string>
    <string name="enter_password">Введите пароль</string>
    <string name="or_continue">или</string>
    <string name="continue_with">Продолжить c </string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">Войти</string>
    <string name="dont_have_account">Нет аккаунта</string>

    <!-- activity_sing_up_user-->
    <string name="name">Имя пользователя</string>
    <string name="register_your_account">Регистрация</string>
    <string name="register">Зарегистрироваться</string>
    <string name="i_have_account">Есть аккаунт</string>

    <!--activity_local-->
    <string name="choose_your_location">Выберите ваш город</string>
    <string name="city">Город</string>
    <string name="are_you_sure">Вы уверены что хотите выбрать данный город?</string>
    <string name="do_you_want_to_continue">Вы действительно хотите продолжить в выбранном городе?</string>
    <string name="yes">Да</string>
    <string name="cansel">Закрыть</string>
    <string name="some_text">Знание точного города важно для нас, чтобы приложение могло предоставить актуальные варианты цен, доступных в вашем регионе.
        Это помогает рассчитать время готовки и обеспечить, что ваш заказ будет вовремя приготовлен.
        Без точной информации о городе заказ невозможен."</string>

    <!--activity_main-->
    <string name="explore">Исследуй мир любимой еды</string>
    <!--Botton Navigation View-->
    <string name="main">Главная</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--fragment_home-->
    <string name="popular">Популярное</string>
    <string name="view_menu">Посмотреть меню</string>
</resources>